2011-??-?? Version 1.13.0

  * BUG: 0036 Verfuegbarer Betrag wurde nicht korrekt als Waehrung formatiert
  * BUG: 0035 BUGZILLA 964 - Auftrag wird u.U. nicht als "ausgefuehrt" markiert, wenn
              die Synchronisierung mittendrin abgebrochen wird
  * CHG: 0034 BUGZILLA 962 - Sortierung der Unterkategorien in "Umsaetze nach Kategorien"
  * NEW: 0033 Code zum Parsen der TAN-Verfahren in PtSecMech ausgelagert. Wenn ein
              TAN-Verfahren aus Vorauswahl abgespeichert wurde, wird es nun nur noch
              dann automatisch verwendet, wenn es in der aktuellen Liste der TAN-Verfahren
              noch enthalten ist. Siehe http://www.onlinebanking-forum.de/phpBB2/viewtopic.php?t=12545
  * NEW: 0032 BLZ "60070070" zu DeutscheBankUmsatzRewriter hinzugefuegt
  * BUG: 0031 Turnus: Das Datum der ersten Zahlung darf nicht ohne Beruecksichtigung des
              Turnus verwendet werden. Beispiel: Erste Zahlung 22.11, Valuta 23.11, Turnus
              monatlich am 1., dann ist die erste Zahlung der 01.12. und nicht der 23.11.
              (nur Anzeigefehler)
  * BUG: 0030 Cache wurde beim Anlegen/Aendern von Umsatz-Kategorien nicht korrekt
              aktualisiert -> Dynamische Umsatz-Zuordnung stimmte erst nach 10 Sekunden wieder.
  * BUG: 0029 Uebernahme des Termins beim Duplizieren war nicht konsistent. Jetzt wird
              er nur noch bei Bank-gefuehrten Termin-Ueberweisungen uebernommen
  * BUG: 0028 HBCI-Version wurde nicht pro Chipkarten-Config gespeichert sondern galt
              fuer alle Kartenleser-Konfigurationen
  * NEW: 0027 Neuer PDF-Export "PDF-Format: Summen aller Kategorien mit Einnahmen und Ausgaben"
              in Auswertung "Umsaetze nach Kategorien"
  * NEW: 0026 In der Auswertung "Spar-Quote" kann nun ein Start-Datum angegeben werden
  * NEW: 0025 Neuer Filter "Umsatz-Kategorie" in Auswertung "Kontoauszuege"
  * CHG: 0024 Contextmenu-Eintrage fuer neue Auftraege im Konto nur aktivieren, wenn